# hexacode

./: .gitignore  AGENTS.md  README.md  docker-compose.local.yml
data/problems/: README.md  catalog.json
data/problems/bookstore-balance/: statement.md
data/problems/delivery-network/: statement.md
data/problems/meeting-room-schedule/: statement.md
data/problems/router-placement/: statement.md
docs/: aws-deployment-walkthrough.md  aws.md  checklist.md  cloud-deployment.md  ecr.md  plan.md
hexacode-backend/: .env.example
hexacode-backend/backend_common/: __init__.py  auth.py  authz.py  bootstrap.py  cache.py  cors.py  database.py  errors.py  identity.py  queue.py  settings.py  storage.py
hexacode-backend/contracts/: route-manifest.json
hexacode-backend/db/: new-app-schema.sql
hexacode-backend/scripts/: import_problem_catalog.py
hexacode-backend/services/api-gateway/: Dockerfile  pyproject.toml
hexacode-backend/services/api-gateway/app/: __init__.py  main.py
hexacode-backend/services/chat-lambda/: README.md  handler.py
hexacode-backend/services/identity-service/: Dockerfile  pyproject.toml
hexacode-backend/services/identity-service/app/: __init__.py  main.py
hexacode-backend/services/problem-service/: Dockerfile  pyproject.toml
hexacode-backend/services/problem-service/app/: __init__.py  main.py
hexacode-backend/services/submission-service/: Dockerfile  pyproject.toml
hexacode-backend/services/submission-service/app/: __init__.py  main.py
hexacode-backend/services/worker/: Dockerfile  pyproject.toml
hexacode-backend/services/worker/app/: __init__.py  main.py
hexacode-frontend/: .dockerignore  .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
hexacode-frontend/src/: main.tsx
hexacode-frontend/src/app/: Providers.tsx  RootErrorBoundary.tsx  router.tsx
hexacode-frontend/src/components/: Markdown.tsx
hexacode-frontend/src/lib/: env.ts  query.ts  utils.ts
hexacode-frontend/src/routes/: auth-callback.tsx  dashboard-home.tsx  dashboard-operations.tsx  dashboard-problems.tsx  dashboard-storage.tsx  dashboard-tags.tsx  dashboard-users.tsx  forgot-password.tsx  home.tsx  login.tsx  new-password.tsx  not-found.tsx  problem-detail.tsx  problem-edit.tsx  problem-new.tsx  problem-solve.tsx  problem-testsets.tsx  problems.tsx  signup.tsx  submission-detail.tsx  (+1 more)
scripts/: import_problem_catalog.py  push-ecr.ps1
tmp/aws/: problem-service-rediss-probe-overrides.json
tmp/cloudfront/: distribution-config-spa.json  hexacode-spa-rewrite.js
tmp/ecs-taskdefs/: hexacode-prod-identity-service-register.json  hexacode-prod-problem-service-register.json  hexacode-prod-submission-service-register.json  submission-service-20260424-102200.json
(+43 files in other folders)
