[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hexacode-api-gateway"
version = "0.1.0"
description = "Thin local gateway for Hexacode service routing."
requires-python = ">=3.12"
dependencies = [
  "boto3>=1.35,<2.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[tool.setuptools]
packages = ["app"]
