[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hexacode-submission-service"
version = "0.1.0"
description = "Submission service scaffold for Hexacode."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "boto3>=1.35,<2.0",
  "httpx>=0.27,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "PyJWT[crypto]>=2.9,<3.0",
  "uvicorn[standard]>=0.30,<1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*", "backend_common", "backend_common.*"]
